# boost-histogram

./: .all-contributorsrc  .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-nodocker.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  azure-pipelines.yml  dev-requirements.txt  noxfile.py  pyproject.toml  setup.cfg  setup.py  setup_helpers.py
.ci/: azure-build-pipeline.yml  azure-cmake-steps.yml  azure-live-at-head-pipeline.yml  azure-live-at-head.yml  azure-macos-setup.yml  azure-publish-dist.yml  azure-setup.yml  azure-steps.yml  azure-submodules.yml  azure-test-pipeline.yml  azure-upload.yml  build-wheels.sh  macos-install-python.sh
.ci/azure-wheel-helpers/: README.md  azure-pipeline-build.yml  azure-publish-dist.yml  azure-steps.yml  build-wheels.sh
.github/: CONTRIBUTING.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml
.github/workflows/: emscripten.yaml  examples.yml  masteronly.yml  pr.yml  pre-commit.yml  tests.yml  weekly.yml  wheels.yml
boost_histogram/: __init__.py  _hist.py  _utils.py  accumulators.py  algorithm.py  axis.py  hist.py  numpy.py  storage.py  tag.py  uhi.py  utils.py
boost_histogram/_internal/: axis.py  axis_transform.py  axis_transform_convert.py  axistuple.py  hist.py  sig_tools.py  storage.py  utils.py  view.py
boost_histogram/axis/: __init__.py  options.py  transform.py
boost_histogram/axis/transform/: __init__.py  convert.py
boost_histogram/cpp/: __init__.py  accumulators.py  algorithm.py  storage.py
boost_histogram/cpp/axis/: __init__.py  transform.py
docs/: CHANGELOG.md  banner_slides.md  changelog.md  conf.py  index.rst  indexing.rst  requirements.txt  support.rst
docs/_src/images/: Makefile  axis_category.tex  axis_circular.tex  axis_integer.tex  axis_regular.tex  axis_variable.tex  histogram_design.tex
docs/api/: boost_histogram.axis.rst  boost_histogram.cpp.axis.rst  boost_histogram.cpp.rst  boost_histogram.rst  modules.rst
docs/notebooks/: BoostHistogramHandsOn.ipynb  PerformanceComparison.ipynb  SimpleExample.ipynb  ThreadedFills.ipynb  aghast.ipynb  conf.sh  xarray.ipynb
docs/template/: package.rst_t  toc.rst_t
docs/usage/: accumulators.rst  analyses.rst  axes.rst  comparison.rst  histogram.rst  indexing.rst  installation.md  installation.rst  numpy.rst  plotting.rst  quickstart.rst  storage.rst  subclassing.rst  transforms.rst
docs/user-guide/: accumulators.rst  analyses.rst  axes.rst  comparison.rst  histogram.rst  indexing.rst  installation.rst  numpy.rst  quickstart.rst  storage.rst  subclassing.rst  transforms.rst
examples/: README.md  docs_density.py  getting_started_listing_03.py  getting_started_listing_04.py  guide_histogram_pickle.py  guide_mixed_cpp_python.cpp  guide_mixed_cpp_python.py  guide_numpy_support.py  guide_python_axis_representation.py  guide_python_histogram.py  simple_2d.py  simple_density.py  simple_log_weight.py  simple_numpy.py  simple_pickly.py  simple_weight.py
examples/cpp/: CMakeLists.txt  simple.cpp
include/: axis.hpp  fill.hpp  histogram.hpp  kwargs.hpp  make_pickle.hpp  metadata.hpp  options.hpp  overload.hpp  register_accumulator.hpp  register_axis.hpp  register_histogram.hpp  register_storage.hpp  regular_numpy.hpp  storage.hpp  sum.hpp  transform.hpp  try_cast.hpp  vector_string_caster.hpp
include/accumulators/: ostream.hpp
include/bh_python/: array_like.hpp  axis.hpp  fill.hpp  histogram.hpp  kwargs.hpp  make_pickle.hpp  metadata.hpp  multi_cell.hpp  multi_weight.hpp  options.hpp  overload.hpp  pybind11.hpp  register_accumulator.hpp  register_axis.hpp  register_histogram.hpp  register_storage.hpp  regular_numpy.hpp  storage.hpp  transform.hpp  try_cast.hpp  vector_string_caster.hpp
include/bh_python/accumulators/: collector.hpp  mean.hpp  ostream.hpp  weighted_mean.hpp  weighted_sum.hpp
notebooks/: AtomicHistograms.ipynb  BoostHistogramHandsOn.ipynb  DevelopInstallExample.ipynb  MultiCellExample.ipynb  MultiWeightExample.ipynb  PerformanceComparison.ipynb  SimpleExample.ipynb  ThreadedFills.ipynb  aghast.ipynb  performance_report.py  xarray.ipynb
scripts/: check_style.sh  check_style_docker.sh  performance_report.py
src/: axis.cpp  axis.hpp  getpython.hpp  histogram.cpp  module.cpp  register_accumulators.cpp  register_algorithm.cpp  register_axis.cpp  register_general_histograms.cpp  register_histograms.cpp  register_make_histogram.cpp  register_shared_histogram.cpp  register_storage.cpp  register_transforms.cpp  register_utils.cpp  register_version.cpp  storage.cpp
src/boost_histogram/: __init__.py  _utils.py  accumulators.py  histogram.py  numpy.py  storage.py  tag.py  test.py  typing.py  utils.py  view.py
src/boost_histogram/_compat/: typing.py
src/boost_histogram/_core/: __init__.pyi  accumulators.pyi  algorithm.pyi  hist.pyi  (+1 more)
src/histogram/: accumulators.cpp  algorithm.cpp  axis.cpp  fast_histograms.cpp  general_histograms.cpp  histogram.cpp  make_histogram.cpp  polymorphic_bin.cpp  shared_histogram.cpp  storage.cpp  utils.cpp  version.cpp
test/: test_regular.py
tests/: CMakeLists.txt  conftest.py  env.py  plottable.py  pytest.ini  speed_numpy.py  test_accumulators.py  test_atomic_fill.py  test_axes_object.py  test_axis.py  test_axis_internal.py  test_axis_options.py  test_basic_import.py  test_benchmark_1d.py  test_benchmark_2d.py  test_benchmark_category_axis.py  test_boost_histogram.py  test_cpp_interface.py  test_docstrings_uhi.py  test_hdf5.py  test_histogram.py  test_histogram_indexing.py  test_histogram_init.py  test_histogram_internal.py  test_histogram_set.py  test_indexed.py  test_indexing.py  test_internal_histogram.py  test_internal_signatures.py  test_make_axis.py  test_make_histogram.py  test_minihist_title.py  test_numpy.py  test_numpy_interface.py  test_pandaslike.py  test_pbt.py  test_pickle.py  test_pickles.py  test_plottable_protocol.py  test_profiles.py  (+12 more)
tests/pickles/: bh_0.10.2.pkl  bh_0.11.1.pkl  bh_0.6.2.pkl  bh_1.1.0.pkl  make_pickle.py
(+74 files in other folders)
